# ccli

./: .clang-tidy  CMakeLists.txt  README.md
src/: test.c
